# mmm

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  gen.cpp  mmm.cpp  run_my_shit.sh  treat_results.cpp  uniform_generator.cpp
app/output/: out3  out4  out5  out6  out7
src/: CMakeLists.txt  mmm.cpp  mmm.h
test/: CMakeLists.txt
test/means_and_medians/: mmm_test.cpp
